--- a/styles.css
+++ b/styles.css
@@ -13,16 +13,16 @@
 .caixa01{
     display: inline-block;
     width: 60%;
-    margin-top: 458px;
-    padding-left: 200px;
+    margin-top: 312px;
+    padding-left: 103px;
     
     
 }
 .title{
     width:695px ;
-    height: 79px;
+    height: 69px;
     font-weight:400 ;
-    font-size:70px ;
+    font-size:49px ;
     line-height:80px ;
     color: rgba(93, 93, 125, 1);
    
@@ -30,11 +30,11 @@
 }
 .title2 {
     font-weight:400 ;
-    font-size: 28px;
-    line-height:48px ;
+    font-size: 30px;
+    line-height:37px ;
     color: rgba(93, 93, 125, 1);
-    width: 695px;
-    height:144px ;
+    width: 511px;
+    height: 144px;
     margin: 15px 0 15px 0;
     opacity: 60%;
 
@@ -66,16 +66,17 @@
 
 .caixa02{ 
     display: inline-block;
-    margin-left: 130px;
+    margin-left: 6px;
     background-color: rgba(93, 93,125, 0.16);
     height:100vh ;
-    width: 40%;
+    width: 39%;
     position: absolute;
 }
 .linkheader {
     margin-top:20px;
     margin-bottom: 30px;
     margin-right:30px ;
+    width: 620px;
 }
 
 .link-menu:nth-child(2)
@@ -93,20 +94,20 @@ cursor: pointer;
 
 }
  .logo-img {
-  width:458px ;
-  height:562px ;
+  width:342px ;
+  height:481px ;
   position: relative;
-  top: 25%;
-  right: 132px;
+  top: 15%;
+  right: 88px;
  }
 
  @media screen and (max-width : 900px) {
 
     .caixa01 {
-        width: 80%;
-        height: 28%;
+        width: 72%;
+        height: 33%;
         padding: 0;
-        margin:1px 0px 0px 18px;
+        margin:68px 0px -8px 67px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -137,7 +138,7 @@ cursor: pointer;
     
     .caixa02 {
         display: block;
-        height: auto;
+        height: 87%;
         width: 100%;
         position: static;
         padding: 37px;
@@ -150,7 +151,7 @@ cursor: pointer;
 
     }
 
-    img {
+    .logo-img{
         max-width: 80%;
         position: static;
 
