--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-weight: 400;
 }
-   
+   header {
+    margin: 24px 0 0 30px
+   }
 .wrapper {
     width: 100vw;
     height: 100vh;
@@ -12,31 +15,33 @@
 
 .caixa01{
     display: inline-block;
-    width: 60%;
-    margin-top: 312px;
-    padding-left: 103px;
+    width: 65%;
+    margin-top: 15%;
+    padding-left: 80px;
     
     
 }
 .title{
-    width:695px ;
-    height: 69px;
-    font-weight:400 ;
-    font-size:49px ;
-    line-height:80px ;
-    color: rgba(93, 93, 125, 1);
+    width: 402px;
+    font-family: 'Oswald';
+    font-style: normal;
+    font-size: 70px;
+    line-height: 80px;
+    color: #5D5D7D;
    
 
 }
 .title2 {
     font-weight:400 ;
-    font-size: 30px;
-    line-height:37px ;
+    font-family: 'Oswald';
+    font-size: 28px;
+    font-style: normal;
+    line-height:48px ;
     color: rgba(93, 93, 125, 1);
-    width: 511px;
-    height: 144px;
+    width: 540px;
+    mix-blend-mode: normal;
     margin: 15px 0 15px 0;
-    opacity: 60%;
+    opacity: 0.6;
 
 }
 .buttonget{
@@ -51,7 +56,7 @@
     line-height:35px ;
     color: rgba(255, 255, 255, 1);
     cursor: pointer;
-    margin-top: 30px;
+    text-align: center;
     
 }
 .buttonget:hover{
@@ -66,17 +71,10 @@
 
 .caixa02{ 
     display: inline-block;
-    margin-left: 6px;
     background-color: rgba(93, 93,125, 0.16);
     height:100vh ;
-    width: 39%;
+    width: 35%;
     position: absolute;
-}
-.linkheader {
-    margin-top:20px;
-    margin-bottom: 30px;
-    margin-right:30px ;
-    width: 620px;
 }
 
 .link-menu:nth-child(2)
@@ -85,49 +83,46 @@
     opacity:40%;} 
 .link-menu
 {
-font-weight:400 ;
-font-size:28px ; 
+font-size:20px ; 
 line-height:41px ;
 color: rgba(93, 93, 125, 1);
-margin:41px;
+margin-right:15px;
 cursor: pointer;
 
 }
  .logo-img {
-  width:342px ;
-  height:481px ;
-  position: relative;
-  top: 15%;
-  right: 88px;
+    position: relative;
+    right: 23%;
+    top: 80px;
  }
 
- @media screen and (max-width : 900px) {
+ @media screen and (max-width : 1114px) {
 
     .caixa01 {
-        width: 72%;
-        height: 33%;
-        padding: 0;
-        margin:68px 0px -8px 67px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        display: block;
+        height: auto;
+        position: static;
+        width: 100%;
+        padding: 40px;
     
     }
 
     .title {
-        font-size: 42px;
-        line-height: 39px;
         width: auto;
-        margin: 15px 50px 0px 50px;
+        height: auto;
+        font-size: 36px;
+        line-height: 52px;  
+        height: auto;
+        margin: 58px 50px 0 50px;
         text-align: center;
     }
 
     .title2 {
 
-        font-size: 20px;
+        font-size: 14px;
         line-height: 24px;
         width: auto;
-        margin: 19px 12px 10px 7px;
+        margin: 15px 40px;
         text-align: center;
     }
 
@@ -138,11 +133,10 @@ cursor: pointer;
     
     .caixa02 {
         display: block;
-        height: 87%;
-        width: 100%;
-        position: static;
-        padding: 37px;
-        margin: -13px 127px;
+        width: 100vw;
+        height: 50%;
+        margin-top: 10px;
+        padding: 0;
     }
 
     header {
@@ -152,13 +146,15 @@ cursor: pointer;
     }
 
     .logo-img{
-        position: relative;
-        height: 75%;
-        width: 108%;
-        margin: -77px 0px 0px -51px;
-
+        max-width: 90%;
+        position: static;
 
     }
 }
 
  
+@media screen and (max-width: 330px){
+    .container-left{
+        height: 60%;
+    }
+}
