alteração na imagem

--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ cursor: pointer;
         display: block;
         width: 100vw;
         height: 50%;
-        margin-top: 10px;
+        margin: 10px 0 0 21px;
         padding: 0;
     }
 
