--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,8 @@
     width: 402px;
     font-family: 'Oswald';
     font-style: normal;
-    font-size: 70px;
-    line-height: 80px;
+    font-size: 58px;
+    line-height: 68px;
     color: #5D5D7D;
    
 
@@ -34,13 +34,13 @@
 .title2 {
     font-weight:400 ;
     font-family: 'Oswald';
-    font-size: 28px;
+    font-size: 26px;
     font-style: normal;
-    line-height:48px ;
+    line-height:39px ;
     color: rgba(93, 93, 125, 1);
-    width: 540px;
+    width: 509px;
     mix-blend-mode: normal;
-    margin: 15px 0 15px 0;
+    margin: 17px 0 25px 0;
     opacity: 0.6;
 
 }
@@ -136,7 +136,7 @@ cursor: pointer;
         display: block;
         width: 100vw;
         height: 50%;
-        margin-top: 10px;
+        margin: 10px 0 0 21px;
         padding: 0;
     }
 
